# Stam-Stable-Fluids

./: CMakeLists.txt  README.md  example_main.cpp  generate_video.py  main.cpp  main_circular_source.cpp  visualize.py
include/: amg_solver.h  fluid_simulator.h  stable_fluid.h  utils.h
src/: fluid_simulator.cpp
visualize/: colormaps.h  colorramp.cpp  colorramp.h  velocityVis.txt  video.m
